fix compiler error in makefile

--- a/LLL/makefile
+++ b/LLL/makefile
@@ -1,12 +1,12 @@
-C=g++
-CFLAGS= -Wall -Werror -g --pedantic
+CC=g++
+CFLAGS= -Wall -Werror -g
 OBJS= lll.o
 
-all:
+all: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) main.cpp
 
 lll.o: lll.cpp
-	$(CC) $(CFLAGS) -c lll.cpp
+	$(CC) $(CFLAGS) -c lll.cpp -o lll.o
 
 clean:
 	rm *.o *.out
